--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,48 +1,176 @@
-body {
-  background-color: #fff;
-  padding-bottom: 1000px;
+body{
+  font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
 
-.pinned-content {
-  height: 1000px;
-  padding: 40px;
-
-
-  //this just means the .pinned-content element which also has the class name "first"
-  &.first {
-    background-color: #f9d9d9;
-  }
-
-  &.second {
-    background-color: #d9e6f9;
-  }
-
-  &.third {
-    background-color: #d9f9db;
-  }
+h1{
+    text-align: center;
 }
 
-#customScene {
-  height: 1000px;
-  padding: 40px;
-  background-color: #ccc;
-
-  &.custom-active {
-    background-color: #307FB5;
-  }
+#multi-line{
+    width: 100%;
 }
 
-.box {
-  width: 200px;
-  height: 150px;
-  background-color: #d9e6f9;
-  border: 10px solid #234c93;
+
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 2px;
 }
 
-svg {
-    text {
-        font-family:$body-font;
-    }
+.ticks {
+  font: 10px sans-serif;
+}
+
+.track,
+.track-inset,
+.track-overlay {
+  stroke-linecap: round;
+}
+
+.track {
+  stroke: #000;
+  stroke-opacity: 0.3;
+  stroke-width: 10px;
+}
+
+.track-inset {
+  stroke: #ddd;
+  stroke-width: 8px;
+}
+
+.track-overlay {
+  pointer-events: stroke;
+  stroke-width: 50px;
+  stroke: transparent;
+  cursor: crosshair;
+}
+
+.handle {
+  fill: #fff;
+  stroke: #000;
+  stroke-opacity: 0.5;
+  stroke-width: 1.25px;
+}
+
+.legend{
+        display: flex;
+        font-size: 1.0em;
+        justify-content: center;
+        flex-flow: wrap;
+}
+
+.legend_piece{
+  display: flex;
+  padding: 10px;
+  margin: 8px;
+}
+
+.squareBox1{
+  height: 8px;
+    width: 8px;
+      border-radius: 50%;
+    display: block;
+    background: #a50f15;
+    padding: 10px;
+}
+
+.squareBox2{
+  height: 8px;
+    width: 8px;
+      border-radius: 50%;
+    display: block;
+    background: #808080;
+    padding: 10px;
+}
+
+
+.squareBox3{
+  height: 8px;
+    width: 8px;
+      border-radius: 50%;
+    display: block;
+    background:#00008B;
+    padding: 10px;
+}
+
+
+p.text{
+    margin-left: 4px;
+    margin-top: -4px;
+    // margin-top: 5px;
+    // margin-top: -0.5px;
+    // margin-top:0.5px;
+    // margin-bottom: 0.5px;
+}
+
+#global-play-button {
+  position: absolute;
+  background: #D81010;
+  padding-right: 26px;
+  border-radius: 3px;
+  border: none;
+  color: white;
+  margin: 0 20px;
+  padding: 0 12px;
+  width: 60px;
+  cursor: pointer;
+  height: 30px;
+}
+
+#us-play-button{
+    position: absolute;
+    background: #D81010;
+    padding-right: 26px;
+    border-radius: 3px;
+    border: none;
+    color: white;
+    margin: 0 20px;
+    padding: 0 12px;
+    width: 60px;
+    cursor: pointer;
+    height: 30px;
+}
+
+#play-button:hover {
+  background-color: #696969;
+}
+
+#content{
+  // margin: 20px;
+}
+
+#button_container{
+  display: flex;
+  margin-top:0;
+   margin-left: auto;
+   margin-right: auto;
+   @media (min-width:768px) {
+      width: 25%;
+   }
+}
+
+button.chartnav{
+  // padding: 10px;
+  font-family: akkurat,sans-serif;
+  margin: 0 auto;
+  border-radius: 5px;
+  background-color:#385775;
+  color:white;
+  border: none;
+  padding: 8px 22px;
+  font-size: 14px;
+  text-align: center;
+  width: 155px;
+    margin-left: 10px;
+}
+
+button.chartnav:hover{
+  background-color: #baccde; /* Green */
+  color: black;
+}
+
+button.currentchart {
 }
 
 div.tooltip {
