--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,7 @@
 body {
   background-color: #fff;
-  padding-bottom: 1000px;
+  margin: 0 auto;
+  // padding-bottom: 1000px;
 }
 
 .pinned-content {
